--- a/src/space-traders/Packages/manifest.json
+++ b/src/space-traders/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "3.1.4",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.11.2",
